--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     <div class="row" id="presentation">
         <div class="offset-2 col-8">
-            <p>Développeur web depuis 3 ans, le code est devenu une passion pour moi. J'aime participer à la conception d'applications permettant d'aider des personnes dans leurs quotidiens. Il y a 1 an je me suis lancée dans l'intelligence artificielle afin d'agrandir mon éventail de compétences et les possibilités de projets. Aujourd'hui, je recherche une entreprise avec des projets dans lesquels m'investir. </p></div>
+            <p>Développeur web depuis 3 ans, le code est devenu une passion pour moi. J'aime participer à la conception d'applications permettant d'aider des personnes dans leur quotidien. Il y a 1 an je me suis lancée dans l'intelligence artificielle afin d'agrandir mon éventail de compétences et les possibilités de projets. Aujourd'hui, je recherche une entreprise avec des projets dans lesquels m'investir. </p></div>
     </div>
 </header>
 
@@ -71,12 +71,12 @@
                 <div class="col-12 col-sm-6 col-md-3">
                     <img src="static/img/icon_environment.png" alt="" class="icon-img p-3">
                     <h4>Environnement</h4>
-                    <p class="text-lg">Window, Linux</p>
+                    <p class="text-lg">Windows, Linux</p>
                 </div>
                 <div class="col-12 col-sm-6 col-md-3">
                     <img src="static/img/icon_database_web.png" alt="" class="icon-img p-3">
                     <h4>Base de données</h4>
-                    <p class="text-lg">Mysql, PostgreSQL, NoSQL, Sqlite</p>
+                    <p class="text-lg">Mysql, PostgreSQL, Sqlite</p>
                 </div>
                 <div class="col-12 col-sm-6 col-md-3">
                     <img src="static/img/icon_backend.png" alt="" class="icon-img p-3">
@@ -95,7 +95,7 @@
             <h3 class="col-12 my-3 title-alternative">Exemples de conceptions réalisées</h3>
             <div class="col-12 col-md-7">
                 <h4 class="title-alternative fx-light">Application web</h4>
-                <p>Sites web reliés à une base de données. Formulaire et fonctionnalitées.)</p>
+                <p>Sites web reliés à une base de données. Formulaire et fonctionnalitées.</p>
                 <ul>
                     <li>Application SaaS, gestion de registres d'entreprise : Registre RPGD - Alain bensoussan</li>
                     <li>Application SaaS, gestion de registres d'entreprise : Violation de données - Alain bensoussan</li>
