information CDI, mise à jour conception web

--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
                 <h4 class="title-alternative fx-light">Application web</h4>
                 <p>Sites web reliés à une base de données. Formulaire et fonctionnalitées.</p>
                 <ul>
-                    <li>Application SaaS, gestion de registres d'entreprise : Registre RPGD - Alain bensoussan</li>
-                    <li>Application SaaS, gestion de registres d'entreprise : Violation de données - Alain bensoussan</li>
-                    <li>Application SaaS, gestion de registres d'entreprise : Registre sous-traitants  - Alain bensoussan</li>
-                    <li>Application dans le domaine du crochet, outil pour apprendre et aider à la conception d'Amigurumi : Little doll</li>
+                    <li>Application SaaS, gestion de registres d'entreprise : Registre RPGD - CDI Alain bensoussan</li>
+                    <li>Application SaaS, gestion de registres d'entreprise : Violation de données - CDI Alain bensoussan</li>
+                    <li>Application SaaS, gestion de registres d'entreprise : Registre sous-traitants  - CDI Alain bensoussan</li>
+                    <li>Plateforme de mise en relation pour la protection animale - projet personnel en cours</li>
                 </ul>
             </div>
             <div class="col-12 col-md-5">
@@ -129,7 +129,6 @@
                 </div>
                 <h3>Stock de données</h3>
                 <p>Dans un fichier au format <strong>csv</strong>, <strong>json</strong>, ou dans une <strong>base de données</strong> relationnelle (mysql, postgresql, noSQLServer).</p>
-
             </div>
 
 
@@ -165,7 +164,7 @@
                     <img src="static/img/icon_data_application.png" alt="" class="">
                 </div>
                 <h3>Déploiement modèle</h3>
-                <p class="mb-4"> Couplé à mes compétences de développeur web, j'aime déployer des modèles d'apprentissage comme fonctionnalité d'application python comme Flask. Mais je peux aussi simplement préparer un script python ou shell à exécuter.</p>
+                <p class="mb-4"> Couplé à mes compétences de développeur web, j'aime déployer des modèles d'apprentissage comme fonctionnalité d'application python. Mais je peux aussi simplement préparer un script python ou shell à exécuter.</p>
             </div>
         </div>
         <div class="row bg-yankeesBlue p-3 m-0">
@@ -213,7 +212,7 @@
             <h2 class="col-12 mb-4">Mon parcours</h2>
             <ul class="">
                 <li>2018-2019, 1 an - <strong>Formation Développeur Data IA X Umanis</strong> - Microsoft powered by simplon</li>
-                <li>2017-2018, 1 an - <strong>Développeur web</strong> - Cabinet Alain Bensoussan Selas</li>
+                <li>2017-2018, 1 an - <strong>CDI Développeur web</strong> - Cabinet Alain Bensoussan Selas</li>
                 <li>2016, 6 mois - <strong>Formation Développement Web</strong> - E2N, Formation labélisée Grande Ecole du Numérique par l'Etat</li>
                 <li>2012, 6 mois - <strong>Formation pré-qualifiante aux industries graphiques</strong> - Médiagraf</li>
                 <li>2008-2010 - <strong>Bep Communication Graphique</strong> - Maximilien Vox</li>
