modification lien domaine coupdepatte.fr
+ Ajout compétence Neo4j

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     <div class="row" id="presentation">
         <div class="offset-2 col-8">
-            <p>Développeur web depuis 3 ans, le code est devenu une passion pour moi. J'aime participer à la conception d'applications permettant d'aider des personnes dans leur quotidien. Il y a 1 an je me suis lancée dans l'intelligence artificielle afin d'agrandir mon éventail de compétences et les possibilités de projets. Aujourd'hui, je recherche une entreprise avec des projets dans lesquels m'investir. </p></div>
+            <p>Développeur web depuis 2016, le code est devenu une passion pour moi. J'aime participer à la conception d'applications permettant d'aider des personnes dans leur quotidien. En 2019, je me suis lancée dans l'intelligence artificielle afin d'agrandir mon éventail de compétences et les possibilités de projets. Aujourd'hui, j'ai trouvé une entreprise avec des projets dans lesquels m'investir. </p></div>
     </div>
 </header>
 
@@ -49,7 +49,7 @@
                 <p>
                     Analyse des problèmes et des besoins d'un client ou d'une situation.
                     Définir les documents nécessaires au suivi et à la bonne communication du projet:
-                    <strong>cahier des charges</strong>, <strong>spécifications techniques</strong>, présentation slides (google slides, powerpoint).
+                    <strong>cahier des charges</strong>, <strong>spécifications techniques</strong>, <strong>présentations</strong> slides (google slides, powerpoint).
                 </p>
             </div>
             <div class="col-12 col-md-4">
@@ -76,7 +76,7 @@
                 <div class="col-12 col-sm-6 col-md-3">
                     <img src="static/img/icon_database_web.png" alt="" class="icon-img p-3">
                     <h4>Base de données</h4>
-                    <p class="text-lg">Mysql, PostgreSQL, Sqlite</p>
+                    <p class="text-lg">Mysql, PostgreSQL, Sqlite, NoSQL, Neo4j</p>
                 </div>
                 <div class="col-12 col-sm-6 col-md-3">
                     <img src="static/img/icon_backend.png" alt="" class="icon-img p-3">
@@ -108,7 +108,7 @@
                 <p>Sites vitrines, sans fonctionnalités.</p>
                 <ul>
                     <li>Ce site pour mon cv (html, js, bootstrap, css)</li>
-                    <li>Site vitrine service pour animaux : <a href="http://coupdepatte.cf" target="_blank">Coup de patte</a></li>
+                    <li>Site vitrine service pour animaux : <a href="http://coupdepatte.fr" target="_blank">Coup de patte</a></li>
                 </ul>
             </div>
         </div>
@@ -128,7 +128,7 @@
                     <img src="static/img/icon_database.png" class="" alt="">
                 </div>
                 <h3>Stock de données</h3>
-                <p>Dans un fichier au format <strong>csv</strong>, <strong>json</strong>, ou dans une <strong>base de données</strong> relationnelle (mysql, postgresql, noSQLServer).</p>
+                <p>Dans un fichier au format <strong>csv</strong>, <strong>json</strong>, ou dans une <strong>base de données</strong> relationnelle (mysql, postgresql, noSQLServer) ou en graph (Neo4j)</p>
             </div>
 
 
